// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Forms/Fields/Toggle Default smoke-test 1`] = `
<button type="button"
        aria-pressed="false"
        data-state="off"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-transparent h-9 min-w-9 px-2"
        aria-label="Toggle bold"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-bold h-4 w-4"
  >
    <path d="M6 12h9a4 4 0 0 1 0 8H7a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h7a4 4 0 0 1 0 8">
    </path>
  </svg>
</button>
`;

exports[`Design System/Forms/Fields/Toggle Disabled smoke-test 1`] = `
<button type="button"
        aria-pressed="false"
        data-state="off"
        data-disabled
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-transparent h-9 min-w-9 px-2"
        aria-label="Toggle bold"
        disabled
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-bold h-4 w-4"
  >
    <path d="M6 12h9a4 4 0 0 1 0 8H7a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h7a4 4 0 0 1 0 8">
    </path>
  </svg>
</button>
`;

exports[`Design System/Forms/Fields/Toggle Large smoke-test 1`] = `
<button type="button"
        aria-pressed="false"
        data-state="off"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-transparent h-10 min-w-10 px-2.5"
        aria-label="Toggle bold"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-bold h-4 w-4"
  >
    <path d="M6 12h9a4 4 0 0 1 0 8H7a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h7a4 4 0 0 1 0 8">
    </path>
  </svg>
</button>
`;

exports[`Design System/Forms/Fields/Toggle Outline smoke-test 1`] = `
<button type="button"
        aria-pressed="false"
        data-state="off"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-transparent shadow-sm hover:bg-accent hover:text-accent-foreground h-9 min-w-9 px-2"
        aria-label="Toggle italic"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-italic h-4 w-4"
  >
    <line x1="19"
          x2="10"
          y1="4"
          y2="4"
    >
    </line>
    <line x1="14"
          x2="5"
          y1="20"
          y2="20"
    >
    </line>
    <line x1="15"
          x2="9"
          y1="4"
          y2="20"
    >
    </line>
  </svg>
</button>
`;

exports[`Design System/Forms/Fields/Toggle Small smoke-test 1`] = `
<button type="button"
        aria-pressed="false"
        data-state="off"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-transparent h-8 min-w-8 px-1.5"
        aria-label="Toggle bold"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-bold h-4 w-4"
  >
    <path d="M6 12h9a4 4 0 0 1 0 8H7a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h7a4 4 0 0 1 0 8">
    </path>
  </svg>
</button>
`;

exports[`Design System/Forms/Fields/Toggle WithText smoke-test 1`] = `
<button type="button"
        aria-pressed="false"
        data-state="off"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-transparent shadow-sm hover:bg-accent hover:text-accent-foreground h-9 min-w-9 px-2"
        aria-label="Toggle italic"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-italic mr-2 h-4 w-4"
  >
    <line x1="19"
          x2="10"
          y1="4"
          y2="4"
    >
    </line>
    <line x1="14"
          x2="5"
          y1="20"
          y2="20"
    >
    </line>
    <line x1="15"
          x2="9"
          y1="4"
          y2="20"
    >
    </line>
  </svg>
  Italic
</button>
`;
